--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,6 +1,7 @@
 # Simple workflow for deploying static content to GitHub Pages
 name: Deploy static content to Pages
 
+
 on:
   # Runs on pushes targeting the default branch
   push:
@@ -28,10 +29,22 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
+      - name: Compress File
+  # You may pin to the exact commit or the version.
+  # uses: coco-hkk/compress-action@c11a95596187d7591f8fde8459e132d066f173f8
+        uses: coco-hkk/compress-action@v2.1
+        with:
+    # file suffix
+          file-suffix: unityweb
+    # target directory path
+          target-directory-path: ./
+    # compress tool: gzip bzip2 zip
+          compress-tool: gzip
       - name: Checkout
         uses: actions/checkout@v3
       - name: Setup Pages
         uses: actions/configure-pages@v1
+      
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
